--- a/Booking/package.json
+++ b/Booking/package.json
@@ -48,6 +48,7 @@
     "ngx-quill": "^25.3.2",
     "ngx-splide": "^7.0.1",
     "prettier": "^3.2.5",
+    "primeng": "^17.18.11",
     "quill": "^2.0.1",
     "rxjs": "~7.4.0",
     "sticky-js": "^1.3.0",
