--- a/Booking/angular.json
+++ b/Booking/angular.json
@@ -93,6 +93,11 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+
+          "options": {
+            "proxyConfig": "proxy.conf.json"
+          },
+
           "configurations": {
             "production": {
               "buildTarget": "booking:build:production"
